--- a/swooblz/src/App.css
+++ b/swooblz/src/App.css
@@ -1,33 +1,36 @@
-.App {
-  text-align: center;
+#reference{
+  color:white;
+}#reference:hover{
+  transition:0.2s;
+  color:blue;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+/* AUTHENTICATION.JS */
+.auth-container{
+  display:flex;
   flex-direction: column;
-  align-items: center;
+  width:100%;
+  height:100vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: #282c34;
 }
-
-.App-link {
-  color: #61dafb;
+.signup-container{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width:25%;
+  height:25%;
+  border-radius:10px;
+  border:1px solid black;
+  background:grey;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.signup-header{
+  font-size:3rem;
+  color:white;
+  border-bottom:1px solid black;
+  width:100%;
+  text-align: center;
+  padding-bottom:10%;
 }
