--- a/swooblz/src/App.css
+++ b/swooblz/src/App.css
@@ -1,3 +1,6 @@
+.App{
+  padding:1% 5%;
+}
 #reference{
   color:white;
 }#reference:hover{
@@ -33,4 +36,36 @@
   width:100%;
   text-align: center;
   padding-bottom:10%;
+}
+/* SIDEBAR.JS */
+.sidebar{
+  width:15%;
+  border-right:1px solid black;
+  height:100vh;
+}
+
+/* UserInfo.JS */
+.user-info{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height:15%;
+}
+.user-data{
+  display:flex;
+  width:90%;
+  align-items: center;
+  justify-content: space-between;
+}
+.user-data h2{
+  font-size:2rem;
+}
+#user-info-profile-img{
+  height:100px;
+  border:1px solid black;
+  border-radius:50%;
+}
+.user-info button{
+  width:50%;
 }
