--- a/swooblz/src/App.css
+++ b/swooblz/src/App.css
@@ -44,28 +44,42 @@
   height:100vh;
 }
 
-/* UserInfo.JS */
-.user-info{
-  display:flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  height:15%;
-}
-.user-data{
-  display:flex;
-  width:90%;
-  align-items: center;
-  justify-content: space-between;
-}
-.user-data h2{
-  font-size:2rem;
-}
-#user-info-profile-img{
-  height:100px;
-  border:1px solid black;
-  border-radius:50%;
-}
-.user-info button{
-  width:50%;
-}
+  /* UserInfo.JS */
+  .user-info{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height:15%;
+  }
+  .user-data{
+    display:flex;
+    width:90%;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .user-data h2{
+    font-size:2rem;
+  }
+  #user-info-profile-img{
+    height:100px;
+    border:1px solid black;
+    border-radius:50%;
+  }
+  .user-info button{
+    width:50%;
+  }
+
+  /* ACTION BUTTONS.JS */
+  .action-buttons{
+    height:5%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+  
+  .action-buttons button{
+    height:40%;
+    width:90%;
+  }
